# vpc-map

./: .gitignore  README.md  main.py  pyproject.toml
src/vpc_map/: __init__.py  cli.py  models.py
src/vpc_map/audit/: custom.py  engine.py
src/vpc_map/reports/: json.py  terminal.py
src/vpc_map/visualization/: graphviz.py
tests/: __init__.py  test_audit.py  test_cli_diff.py  test_collector.py  test_diff_engine.py  test_diff_loader.py  test_diff_reports.py  test_models.py  test_network_analysis.py  test_reports.py
vpc_map/: cli.py  models.py
vpc_map/audit/: __init__.py  aws_waf.py  cis.py  custom.py
vpc_map/aws/: __init__.py  collector.py
vpc_map/diff/: __init__.py  engine.py  loader.py
vpc_map/network/: __init__.py  analysis.py
vpc_map/reports/: html.py  json.py  terminal.py
vpc_map/visualization/: __init__.py  ascii.py  graphviz.py
